discussion/kv_engine/155178/155178_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-29928: Refactor DefragmenterTask::run

Move the code which is executed when 'enabled' to its own function.

Change-Id: I7c651d8ce82446c62858b9dcde7d4b9aa5aa4c9d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2021-06-11 14:45:13.000000000
Message: 
Uploaded patch set 4: Patch Set 3 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-11 16:00:23.000000000
Message: 
Patch Set 4: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36789/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36789/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9808/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10: error: "spdlog/logger.h" file not found [clang-diagnostic-error]
#include "spdlog/logger.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9808/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10:
error: "spdlog/logger.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9808/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8402/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/324/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31437/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11532/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11383/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11809/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10463/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19395/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
